# trace_particle_sim

./: CMakeLists.txt  README.md  convert_crdb_to_text.py  convert_spenvis_to_text.py  debug.mac  diff_flux_electron.txt  diff_flux_h.txt  diff_flux_he.txt  gps_gcr_particles.mac  gps_proton_iso.mac  init_vis.mac  root_analysis.cc  sim.cc  source.sh  vis.mac
data/: crdb_electron.GALPROP  spenvis_gcf_h_he.txt
include/: action.hh  analysis.hh  construction.hh  detector_SD.hh  detector_hit.hh  detector_hits.hh  event_action.hh  generator.hh  histo_manager.hh  physics.hh  run_action.hh  tracking_action.hh
scripts/: convert_crdb_to_text.py  convert_spenvis_to_text.py
src/: action.cc  construction.cc  detector_SD.cc  detector_hits.cc  event_action.cc  generator.cc  histo_manager.cc  physics.cc  run_action.cc  tracking_action.cc
